Make example more readable

--- a/examples/simple.css
+++ b/examples/simple.css
@@ -3,7 +3,7 @@ body {
 }
 
 .content {
-    background-color: rgba(0,200,0,0.4);
+    background-color: navajowhite;
     width: 50%;
     margin: 15vh auto 0;
     height: 70vh;
